--- a/Stonks/app/src/main/AndroidManifest.xml
+++ b/Stonks/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         </activity>
         <activity android:name=".ManageActivity" />
         <activity android:name=".PaymentActivity" />
+        <activity android:name=".IncentivesActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +25,7 @@
         <activity android:name=".MainActivity">
 
         </activity>
+
     </application>
 
 </manifest>
