--- a/appV2/local.properties
+++ b/appV2/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 10 15:17:01 SGT 2020
-sdk.dir=C\:\\Users\\asien\\AppData\\Local\\Android\\Sdk
+#Thu Jun 11 09:22:23 SGT 2020
+sdk.dir=/home/pichu/Android/Sdk
